--- a/Mieliala_app/app/src/main/res/layout/activity_calendar.xml
+++ b/Mieliala_app/app/src/main/res/layout/activity_calendar.xml
@@ -16,4 +16,10 @@
         app:layout_constraintRight_toRightOf="parent"
         android:background="@drawable/rounded_corner"
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textTest"
+        android:textSize="30sp"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
