--- a/Mieliala_app/app/src/main/res/layout/activity_day.xml
+++ b/Mieliala_app/app/src/main/res/layout/activity_day.xml
@@ -6,10 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".DayActivity"
     android:background="@drawable/gradient"
-
-
-
-
     >
 
 
@@ -33,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="sans-serif-medium"
         android:text="20. Maaliskuu"
         android:textSize="20dp"
 
@@ -59,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
-            android:fontFamily="sans-serif-black"
+            android:fontFamily="sans-serif-medium"
             android:text="Mood"
             android:textSize="25dp" />
 
@@ -104,7 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
-            android:fontFamily="sans-serif-black"
+            android:fontFamily="sans-serif-medium"
             android:text="Notes"
             android:textSize="25dp" />
 
@@ -114,10 +110,11 @@
             android:layout_marginLeft="40dp">
 
             <TextView
+                android:id="@+id/noteTextView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
-                android:text="xxxxxx xxxxxx ddddddda"/>
+                android:text=""/>
 
         </ScrollView>
 
