--- a/Mieliala_app/app/src/main/res/layout/activity_day.xml
+++ b/Mieliala_app/app/src/main/res/layout/activity_day.xml
@@ -9,32 +9,19 @@
     >
 
 
-
     <TextView
-        android:id="@+id/yearTextView"
+        android:id="@+id/dateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="13dp"
         android:fontFamily="sans-serif-black"
-        android:text="2020"
+        android:text="20/03/2020"
+
         android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/dayMonthTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="20. Maaliskuu"
-        android:textSize="20dp"
-
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/yearTextView" />
 
 
     <LinearLayout
@@ -48,7 +35,7 @@
 
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dayMonthTextView">
+        app:layout_constraintTop_toBottomOf="@+id/dateTextView">
 
         <TextView
             android:layout_width="wrap_content"
