--- a/Mieliala_app/app/src/main/res/values/colors.xml
+++ b/Mieliala_app/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#F15F79</color>
-    <color name="colorPrimaryDark">#8F424F</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryDark">#732D3A</color>
+    <color name="colorAccent">#A63046</color>
 </resources>
