--- a/Mieliala_app/app/src/main/res/drawable/custom_thumb.xml
+++ b/Mieliala_app/app/src/main/res/drawable/custom_thumb.xml
@@ -2,9 +2,9 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="#BF6D54"/>
+            <solid android:color="#CD7672"/>
             <stroke android:width="2dp"
-                android:color="#804938" />
+                android:color="#985653" />
             <size
                 android:width="35dp"
                 android:height="35dp"/>
