--- a/Mieliala_app/app/src/main/res/drawable/seekbar_style.xml
+++ b/Mieliala_app/app/src/main/res/drawable/seekbar_style.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:id="@android:id/background"
-        android:drawable="@drawable/seekbar_gradient" >
+        android:drawable="@drawable/border_shadow" >
     </item>
 
     <item
