--- a/Mieliala_app/app/src/main/res/layout/activity_main.xml
+++ b/Mieliala_app/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/rounded_corner"
-        app:layout_constraintBottom_toBottomOf="@+id/buffer"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonNext"
         app:layout_constraintTop_toTopOf="@id/textHeader2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -41,7 +41,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="30dp"
-        android:progress="50"
+        android:progress="60"
         android:progressDrawable="@drawable/seekbar_style"
         android:thumb="@drawable/custom_thumb"
         android:paddingBottom="30dp"
@@ -105,12 +105,6 @@
         app:layout_constraintTop_toBottomOf="@id/editFeel"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="30dp"
-        />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        app:layout_constraintTop_toBottomOf="@id/buttonSkip"
-        android:id="@+id/buffer"
         />
 
 
