--- a/Mieliala_app/app/src/main/res/layout/activity_day.xml
+++ b/Mieliala_app/app/src/main/res/layout/activity_day.xml
@@ -101,11 +101,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
+                android:textSize="20sp"
+                android:lineSpacingExtra="2sp"
                 android:text=""/>
 
         </ScrollView>
 
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
