--- a/Mieliala_app/app/src/main/res/layout/activity_main.xml
+++ b/Mieliala_app/app/src/main/res/layout/activity_main.xml
@@ -116,4 +116,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="30dp"
         />
+    <Button
+        android:id="@+id/buttonClear"
+        android:onClick="cleadDB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="clear db"
+        app:layout_constraintTop_toBottomOf="@id/buttonSkip"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="30dp"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
