--- a/Mieliala_app/app/src/main/res/layout/activity_chart.xml
+++ b/Mieliala_app/app/src/main/res/layout/activity_chart.xml
@@ -12,8 +12,7 @@
         android:layout_height="fill_parent"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible">
+        app:layout_constraintTop_toTopOf="parent">
 
     </com.github.mikephil.charting.charts.PieChart>
 
@@ -26,7 +25,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.453"
+        app:layout_constraintVertical_bias="0.46"
         app:srcCompat="@drawable/ympyra" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
