--- a/Mieliala_app/app/src/main/res/layout/activity_day.xml
+++ b/Mieliala_app/app/src/main/res/layout/activity_day.xml
@@ -28,14 +28,18 @@
         android:id="@+id/linearLayout"
         android:layout_width="370dp"
         android:layout_height="151dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginLeft="25dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/rounded_corner"
 
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateTextView">
+        app:layout_constraintTop_toBottomOf="@+id/dateTextView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -71,10 +75,10 @@
 
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="370dp"
         android:layout_height="311dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginLeft="25dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="13dp"
         android:background="@drawable/rounded_corner"
 
