--- a/Mieliala_app/app/src/main/res/layout/activity_main.xml
+++ b/Mieliala_app/app/src/main/res/layout/activity_main.xml
@@ -121,6 +121,7 @@
         android:onClick="cleadDB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         android:text="clear db"
         app:layout_constraintTop_toBottomOf="@id/buttonSkip"
         app:layout_constraintLeft_toLeftOf="parent"
